# Prey_Capture_Python

./: .readthedocs.yml  README.md  get_angle  pyproject.toml
docs/: conf.py  index.rst
docs/api/analysis/: extract_points.rst  geometries.rst  index.rst  prey_cap_metrics.rst
notebooks/: ANOVA.ipynb  Untitled.ipynb  calculatemetrics.ipynb  cricketsize.ipynb  detectcricketerrors.ipynb  flatten_geos.ipynb  folderlist.txt  groupmetrics.ipynb  groupmetrics_v2.ipynb  ind_mouse_delta.ipynb  plotting_functions.ipynb  posterfigs.ipynb  randomvideoclips.ipynb  segment_data.ipynb  step1_mouse_prey_capture_ARHMM_clean.ipynb  step2_mouse_prey_capture_movies.ipynb  test_dlctracks.ipynb  testing.ipynb  untitled.py  validatedlctracks.ipynb
prey_capture_python/: __init__.py
prey_capture_python/analysis/: Untitled.ipynb  __init__.py  clipMaskSave_MCS.m  compress_h264.py  darkvids.txt  darkvids_key.txt  dataset.py  extract_points.py  filelist.txt  folderlist.txt  geometries.py  lightvids.txt  opto_metrics.py  opto_metrics_baseline.py  prey_cap_metrics.py
prey_capture_python/data/: model.py  position.py  trial.py  utils.py
prey_capture_python/environments/: .environment.yaml.swp  environment.yaml
