[tool.poetry]
name = "prey_capture_python"
version = "0.1.0"
description = "python version of existing prey capture analysis pipeline"
authors = ["mshallow <c.shallow@wustl.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scipy = ">=1.7.0"
numpy = ">=1.21.0"
Sphinx = {version = "^4.4.0", optional = true}
furo = {version = "^2022.2.23", optional = true}
myst-parser = {version = "^0.17.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["Sphinx", "furo", "myst-parser"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
